# kicad-mcp-python

./: .cursorindexingignore  .env  .env.example  .gitignore  .gitmodules  CAPABILITIES.md  MCP_TESTING.md  README-DEV.md  README.md  SESSION_CONTEXT_2025_01_03.md  main.py  pyproject.toml
docs/: phase-0-kicad-core-analysis.md
kicad_mcp_python/: server.py
kicad_mcp_python/core/: ActionFlowManager.py  mcp_manager.py
kicad_mcp_python/pcb/: pcbmodule.py
kicad_mcp_python/pcb/tools/: __init__.py  analyze_tool.py  manipulate_tool.py
kicad_mcp_python/schematic/: component_boundary.py  schematicmodule.py  smart_routing.py
kicad_mcp_python/schematic/tools/: __init__.py  analyze_tool.py  library_tool.py  manipulate_tool.py  smart_routing_tool.py
kicad_mcp_python/tests/: test_server.py
kicad_mcp_python/tools/: smart_wire_tool.py
kicad_mcp_python/utils/: convert_proto.py  kicad_cli.py  project_detector.py  validation.py
kipy/: kicad_api_version.py
kipy/proto/board/: board_commands_pb2.py  board_pb2.py  board_types_pb2.py  board_types_pb2.pyi
kipy/proto/common/: envelope_pb2.py
kipy/proto/common/commands/: base_commands_pb2.py  editor_commands_pb2.py  editor_commands_pb2.pyi  project_commands_pb2.py
kipy/proto/common/types/: base_types_pb2.py  base_types_pb2.pyi  enums_pb2.py  enums_pb2.pyi  project_settings_pb2.py
kipy/proto/schematic/: schematic_commands_pb2.py  schematic_commands_pb2.pyi  schematic_types_pb2.py  schematic_types_pb2.pyi
